# boto3-refresh-session

./: CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  pull_request.yml  push.yml  validate_pr_title.yml
boto3_refresh_session/: __init__.py
