[project]
name = "boto3-refresh-session"
version = "10.0.3"
description = "A drop-in replacement for boto3.Session named RefreshableSession. It automatically refreshes temporary AWS credentials, caches clients, and natively supports MFA providers. It also supports automatic temporary AWS security credential refresh for STS, IOT Core, and custom credential callables."
authors = [
  { name = "Mike Letts", email = "general@61418.io" }
]
maintainers = [
  { name = "61418", email = "general@61418.io" }
]
license = { text = "MPL-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "boto3",
  "boto3-client-cache",
  "botocore",
  "typing-extensions",
]
keywords = ["boto3", "botocore", "boto", "aws", "sts", "credentials", "token", "refresh", "iot", "x509", "mqtt", "AssumeRole", "mfa", "cache", "client cache", "client"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
  "Topic :: Security",
]

[project.urls]
Homepage = "https://61418.io/boto3-refresh-session"
Repository = "https://github.com/61418/boto3-refresh-session"
Documentation = "https://61418.io/boto3-refresh-session"
Changelog = "https://github.com/61418/boto3-refresh-session/blob/main/CHANGELOG.md"
Issues = "https://github.com/61418/boto3-refresh-session/issues"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["NOTICE", "LICENSE", "boto3_refresh_session/**"]

[project.optional-dependencies]
iot = ["awscrt", "awsiotsdk"]

[dependency-groups]
dev = [
  "furo",
  "numpydoc",
  "pre-commit",
  "pytest",
  "ruff",
  "sphinx",
  "sphinx-copybutton",
  "sphinxext-opengraph[social-cards]",
  "tomlkit",
]
iot = ["awscrt", "awsiotsdk"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"**/*.pyi" = ["ALL"]
"**/__init__.py" = ["F401", "F403"]
"tests/test_session_stubbed.py" = ["E501"]
"boto3_refresh_session/methods/custom.py" = ["E501"]
"boto3_refresh_session/utils/config.py" = ["E501"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
